--- a/index.html
+++ b/index.html
@@ -7,6 +7,60 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>テキストテキスト</h1>
+    <script>
+        console.log("Hi");
+        console.log(3+5);
+        console.log(24/4);
+
+      //   面積
+        let length=5;
+        console.log(length);
+        console.log(length*length*3.14)
+
+      　let number=1;
+        number=3;
+        console.log(number);
+
+        const language="日本語";
+        console.log(language);
+        console.log(language+"を話すことができる")
+
+        const name="山田";
+        console.log('私の名前は'+name+'です');
+
+        const age=21;
+        console.log(age>=20);
+        console.log(age<20);
+        if(age>=20){
+            console.log("20歳以上です")
+        }
+        else{
+            console.log("20歳未満です")
+        }
+
+        const password="1234"
+        if(password==="1234"){
+        console.log("ログインに成功しました");
+        }
+        if(password!=="1234"){
+        console.log("パスワードが違います");
+        }
+
+        const rank=4;
+        switch(rank){
+            case 1:
+                console.log("金メダル");
+                break;
+            case 2:
+                console.log("銀メダル");
+                break;
+            case 3:
+                console.log("銅メダル");
+                break;
+            default:
+                console.log("メダルなし");
+                break;
+        }
+    </script>
 </body>
 </html>
